Style pass: IDE auto-format + getFirst() + javadoc/yaml polish
IntelliJ auto-format across AscendAgent main + test (imports reordered,
trailing whitespace, record body brace split). Replace list.get(0) with
list.getFirst() where applicable. Drop unused ArrayList / Collectors
imports in ChatHistoryCompactionService. Method-reference in
TestcontainersBase (MINIO::getS3URL). Javadoc/yaml comment grammar polish
("Otherwise,", "autoconfigured", "inexpensive-model", "e.g.,"). No behavior
changes.